# fpmas-model-template

./: CMakeLists.txt  README.md  main.cpp
include/: agents.h
src/: agents.cpp
